src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Activity_Hour__c</fullName>
        <formula>IF(VALUE(MID(TEXT(  CreatedDate  ),12,2)) &lt; 6, 24-(6-VALUE(MID(TEXT( CreatedDate ),12,2))), VALUE(MID(TEXT( CreatedDate ),12,2)) - 6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Activity Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <description>Field I&apos;ll be using in place of Type until I can write a script and get the old data cleaned up. The old type field will be broken out into two different fields in the new format - activity type and outcome</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Inbound Call</fullName>
                </value>
                <value>
                    <fullName>Inbound Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outbound Call</fullName>
                </value>
                <value>
                    <fullName>Outbound Email</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Incoming Text</fullName>
                </value>
                <value>
                    <fullName>Outgoing Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Attempt__c</fullName>
        <description>Should auto-populate via trigger (WelcomePktSent) with the current number of outbound calls (+1) made for this contact/lead.</description>
        <label>Attempt</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_No_Answer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No Patient Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Call_QA_d__c</fullName>
        <formula>if(Was_call_QA_d__c ,&apos;Yes&apos;,&apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Call QA&apos;d?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDatetime__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedDatetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Eloqua_Campaign_ID__c</fullName>
        <description>Campaign ID from Eloqua (correlative in Salesforce)</description>
        <label>Eloqua Campaign ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Agent__c</fullName>
        <description>Name of the agent from an external agency that registered this taks or activity.</description>
        <label>External Agent</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP__Chat_Transcript_Id__c</fullName>
        <label>Chat Transcript Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LP__Chat_Transcript__c</fullName>
        <description>Link to the Chat Transcript record</description>
        <formula>IF( OR(ISNULL(LP__Chat_Transcript_Id__c),LEN(LP__Chat_Transcript_Id__c) == 0),&quot;&quot;,  HYPERLINK(&apos;/&apos; + LP__Chat_Transcript_Id__c , &apos;View&apos;,&apos;_self&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Link to the Chat Transcript record</inlineHelpText>
        <label>Chat Transcript</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Objection__c</fullName>
        <label>Objection</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Outcome__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Not Checked</fullName>
                </value>
                <value>
                    <fullName>Calling for someone else</fullName>
                </value>
                <value>
                    <fullName>Consult sched too full</fullName>
                </value>
                <value>
                    <fullName>Cost prohibitive</fullName>
                </value>
                <value>
                    <fullName>Family Conference</fullName>
                </value>
                <value>
                    <fullName>Future Candidate</fullName>
                </value>
                <value>
                    <fullName>Health Issues</fullName>
                </value>
                <value>
                    <fullName>Hung up</fullName>
                </value>
                <value>
                    <fullName>Information Gathering</fullName>
                </value>
                <value>
                    <fullName>Insurance Issues</fullName>
                </value>
                <value>
                    <fullName>Location/Distance</fullName>
                </value>
                <value>
                    <fullName>Price shopping</fullName>
                </value>
                <value>
                    <fullName>Scheduling Issues</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Agent Not Available</fullName>
                </value>
                <value>
                    <fullName>Changed mind during call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outcome__c</fullName>
        <description>Selection indicating the outcome of a task. This will be used to potentially update campaign status vai trigger in some instances (WelcomePktSent)</description>
        <label>Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Busy/No Answer</fullName>
                </value>
                <value>
                    <fullName>Disconnect/Not in Service</fullName>
                </value>
                <value>
                    <fullName>Wrong Number</fullName>
                </value>
                <value>
                    <fullName>Hung Up</fullName>
                </value>
                <value>
                    <fullName>VM - LM</fullName>
                </value>
                <value>
                    <fullName>VM - no message</fullName>
                </value>
                <value>
                    <fullName>VM - full</fullName>
                </value>
                <value>
                    <fullName>LM - 3rd Party</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Consult Scheduled</fullName>
                </value>
                <value>
                    <fullName>Consult Confirmed</fullName>
                </value>
                <value>
                    <fullName>Consult Confirmed &amp; Retained</fullName>
                </value>
                <value>
                    <fullName>Consult Rescheduled</fullName>
                </value>
                <value>
                    <fullName>Consult Cancelled</fullName>
                </value>
                <value>
                    <fullName>Refused Reschedule</fullName>
                </value>
                <value>
                    <fullName>PPT will call back</fullName>
                </value>
                <value>
                    <fullName>No Call Elected</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Non-Sales Call</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Callback Consult Scheduled</fullName>
                </value>
                <value>
                    <fullName>Callback Consult Rescheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Activity__c</fullName>
        <description>Used by Practice Development</description>
        <label>Sales Activity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Call</fullName>
                </value>
                <value>
                    <fullName>Center Visit</fullName>
                </value>
                <value>
                    <fullName>GP Meeting</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>In Office</fullName>
                </value>
                <value>
                    <fullName>Training in CC Practice</fullName>
                </value>
                <value>
                    <fullName>Drop-In</fullName>
                </value>
                <value>
                    <fullName>Telephone Call</fullName>
                </value>
                <value>
                    <fullName>Email/Marketing/Training</fullName>
                </value>
                <value>
                    <fullName>Misc./General</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sort_Date__c</fullName>
        <description>Field used by top 10 callback system to sort tasks. If activity date is not blank, that field will be the value. Otherwise, it should default to createddate</description>
        <formula>if(isblank(ActivityDate), DATEVALUE(CreatedDate) ,ActivityDate)</formula>
        <label>Sort Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Was_call_QA_d__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Was call QA&apos;d</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_not_Schedule__c</fullName>
        <label>Why not Schedule</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>